feat: Implement surge pricing, update docs and fix ports